small change to desc.

--- a/Cipher/cipher/DESCRIPTION
+++ b/Cipher/cipher/DESCRIPTION
@@ -2,7 +2,7 @@ Package: cipher
 Title: Functions to Encipher and Decipher Text, Enabling Clandestine Communications
 Version: 0.0.1
 Authors@R: person("Ben", "Nickley", email = "bnickley4@gmail.com", role = c("aut", "cre"))
-Description: Cipher contains codes for enciphering and deciphering text using a Running Key Cipher or a Caeser Cipher. This package also allows for primitive frequency analysis of letters in a text
+Description: cipher contains codes for enciphering and deciphering text using a Running Key Cipher or a Caeser Cipher. This package also allows for primitive frequency analysis of letters in a text
 Depends: R (>= 3.3.2)
 License: Unlimited
 Encoding: UTF-8
