--- a/Cipher/DESCRIPTION
+++ b/Cipher/DESCRIPTION
@@ -1,10 +1,14 @@
-Package: Cipher
+Package: cipher
 Title: Functions to Encipher and Decipher Text, Enabling Clandestine Communications
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: person("Ben", "Nickley", email = "bnickley4@gmail.com", role = c("aut", "cre"))
-Description: Cipher contains codes for enciphering and deciphering text using a Running Key Cipher or a Caeser Cipher. This package also allows for primitive frequency analysis of letters in a text
+Description: cipher contains codes for enciphering and deciphering text using a Running Key Cipher or a Caeser Cipher. This package also allows for primitive frequency analysis of letters in a text
 Depends: R (>= 3.3.2)
 License: Unlimited
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: 
+  ggplot2,
+  reshape2,
+  gridExtra
